--- a/disconnected_islands_dialog_base.ui
+++ b/disconnected_islands_dialog_base.ui
@@ -29,20 +29,7 @@
     <set>QDialogButtonBox::Cancel|QDialogButtonBox::Ok</set>
    </property>
   </widget>
-  <widget class="QLabel" name="label">
-   <property name="geometry">
-    <rect>
-     <x>80</x>
-     <y>40</y>
-     <width>151</width>
-     <height>16</height>
-    </rect>
-   </property>
-   <property name="text">
-    <string>by Peter Smythe / AfriGIS</string>
-   </property>
-  </widget>
-  <widget class="QWidget" name="">
+  <widget class="QWidget" name="layoutWidget">
    <property name="geometry">
     <rect>
      <x>10</x>
@@ -74,7 +61,7 @@
     </item>
    </layout>
   </widget>
-  <widget class="QWidget" name="">
+  <widget class="QWidget" name="layoutWidget">
    <property name="geometry">
     <rect>
      <x>10</x>
@@ -166,18 +153,43 @@
     </item>
    </layout>
   </widget>
+  <widget class="QLabel" name="labelAfriGIS">
+   <property name="geometry">
+    <rect>
+     <x>82</x>
+     <y>40</y>
+     <width>161</width>
+     <height>20</height>
+    </rect>
+   </property>
+   <property name="text">
+    <string>&lt;html&gt;&lt;head/&gt;&lt;body&gt;&lt;p&gt;by Peter Smythe / &lt;a href=&quot;https://www.afrigis.co.za&quot;&gt;&lt;span style=&quot; text-decoration: underline; color:#0000ff;&quot;&gt;AfriGIS&lt;/span&gt;&lt;/a&gt;&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
+   </property>
+   <property name="openExternalLinks">
+    <bool>true</bool>
+   </property>
+  </widget>
+  <widget class="QLabel" name="label_6">
+   <property name="geometry">
+    <rect>
+     <x>20</x>
+     <y>250</y>
+     <width>171</width>
+     <height>20</height>
+    </rect>
+   </property>
+   <property name="toolTip">
+    <string>&lt;html&gt;&lt;head/&gt;&lt;body&gt;&lt;p&gt;Please find sample data in your plugins directory: ~/.qgis2/python/plugins/disconnected-islands/sample data/islands.shp&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
+   </property>
+   <property name="text">
+    <string>&lt;html&gt;&lt;head/&gt;&lt;body&gt;&lt;p&gt;&lt;span style=&quot; color:#a3a3a3;&quot;&gt;Hover over for sample data&lt;/span&gt;&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
+   </property>
+  </widget>
+  <zorder>layoutWidget</zorder>
+  <zorder>layoutWidget</zorder>
   <zorder>button_box</zorder>
-  <zorder>layerComboBox</zorder>
-  <zorder>label_icon</zorder>
-  <zorder>label_2</zorder>
-  <zorder>label_2</zorder>
-  <zorder></zorder>
-  <zorder>label_3</zorder>
-  <zorder>label_4</zorder>
-  <zorder>mQgsDoubleSpinBox</zorder>
-  <zorder>label_5</zorder>
-  <zorder>plainTextEdit</zorder>
-  <zorder>label</zorder>
+  <zorder>labelAfriGIS</zorder>
+  <zorder>label_6</zorder>
  </widget>
 
  <connections>
